--- a/tsconfig.json
+++ b/tsconfig.json
@@ -9,6 +9,9 @@
         "skipLibCheck": true,
         "sourceMap": true,
         "strict": true,
+        "paths": {
+          "$lib/*": ["src/lib/*"]
+        },
         "moduleResolution": "bundler"
     }
 }
