--- a/package.json
+++ b/package.json
@@ -44,7 +44,6 @@
 },
 "type": "module",
 "dependencies": {
-  "@storyblok/svelte": "^4.0.6",
-  "http-status": "^1.7.4"
-}
+  "@storyblok/svelte": "^4.0.6"
+  }
 }
