--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "storyblok-redirectmap",
+  "name": "@yochaubs/storyblok-redirectmap",
   "version": "1.0.0",
   "description": "Redirect map",
   "main": "index.js",
@@ -13,37 +13,37 @@
     "prepublishOnly": "npm run package",
     "check": "svelte-kit sync && svelte-check --tsconfig ./tsconfig.json",
     "check:watch": "svelte-kit sync && svelte-check --tsconfig ./tsconfig.json --watch"
-},
-"devDependencies": {
-  "@sveltejs/adapter-node": "^5.0.1",
-  "@sveltejs/kit": "^2.5.10",
-  "@sveltejs/vite-plugin-svelte": "^3.1.1",
-  "@sveltejs/package": "^2.3.1",
-  "@vitest/coverage-v8": "^1.6.0",
-  "isomorphic-fetch": "^3.0.0",
-  "jsdom": "^24.1.0",
-  "prettier": "^3.3.1",
-  "prettier-plugin-svelte": "^3.2.3",
-  "svelte": "^4.2.17",
-  "svelte-check": "^3.8.0",
-  "tslib": "^2.6.3",
-  "typescript": "^5.4.5",
-  "vite": "^5.2.12",
-  "vitest": "^1.6.0"
-},
-"files": [
-  "dist",
-  "!dist/**/*.test.*",
-  "!dist/**/*.spec.*"
-],
-"exports": {
-  ".": {
+  },
+  "devDependencies": {
+    "@sveltejs/adapter-node": "^5.0.1",
+    "@sveltejs/kit": "^2.5.10",
+    "@sveltejs/vite-plugin-svelte": "^3.1.1",
+    "@sveltejs/package": "^2.3.1",
+    "@vitest/coverage-v8": "^1.6.0",
+    "isomorphic-fetch": "^3.0.0",
+    "jsdom": "^24.1.0",
+    "prettier": "^3.3.1",
+    "prettier-plugin-svelte": "^3.2.3",
+    "svelte": "^4.2.17",
+    "svelte-check": "^3.8.0",
+    "tslib": "^2.6.3",
+    "typescript": "^5.4.5",
+    "vite": "^5.2.12",
+    "vitest": "^1.6.0"
+  },
+  "files": [
+    "dist",
+    "!dist/**/*.test.*",
+    "!dist/**/*.spec.*"
+  ],
+  "exports": {
+    ".": {
       "types": "./dist/index.d.ts",
       "svelte": "./dist/index.js"
-  }
-},
-"type": "module",
-"dependencies": {
-  "@storyblok/svelte": "^4.0.6"
+    }
+  },
+  "type": "module",
+  "dependencies": {
+    "@storyblok/svelte": "^4.0.6"
   }
 }
